# obos-old

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CON  Doxyfile  Goals.md  LICENSE  LICENSE.txt  OVMF_VARS_4M.ms.fd  Output-Build.txt  README  README.md  analyzer_output.txt  ascii_art.txt  autorun.inf  build.ninja  check_multiboot.sh  cmake_install.cmake  compile.sh  compile_debug.sh  file.iso  find_addr.sh  generate_iso.sh  hlp.txt  launch-i686.bat  launch-i686.sh  launch.bat  linker.ld  log.txt  oboskrnl.sym  qemu_log.txt  rdmsr.cpp  stderr  temp  temp.cpp  (+1 more)
DriverAPI/: CMakeLists.txt  DriverAPI.c  DriverAPI.h
fatDriver/: CMakeLists.txt  fat.c  linker.ld
kernel/: CMakeLists.txt  Makefile  acpi.c  bitfields.c  bitfields.h  cmake_install.cmake  driver_syscall.c  elf.c  elf.h  elfStructures.h  error.c  error.h  gdt.c  gdt.h  gdtUpdate.asm  hashTable.c  hashTable.h  initrd.c  initrd.h  inline-asm.c  inline-asm.h  interrupts.c  interrupts.h  kalloc.c  kalloc.h  kernel_bootstrap-i686.S  kernel_bootstrap-i686.asm  keyboard.c  keyboard.h  klog.c  klog.h  kmain.c  kserial.c  kserial.h  linker.ld  multiboot.h  multitasking.asm  multitasking.c  multitasking.h  mutexes.c  (+10 more)
kernel/liballoc/: liballoc_1_1.c  liballoc_1_1.h
kernel/list/: list.h
kernel/multiboot/: mutliboot.h
kernel_terminal/kernel_terminal/: CMakeLists.txt  kernel_terminal.cpp
launch-qemu/: CMakeLists.txt  cmake_install.cmake  main.c
src/drivers/filesystems/ustar/: CMakeLists.txt  connection.cpp  dmain.c  dmain.cpp
src/drivers/generic/acpi/: CMakeLists.txt  impl.cpp  main.cpp  stdlib_impl.cpp
src/drivers/generic/fat/: CMakeLists.txt  cache.cpp  cache.h  fat32_structs.h  fat_structs.h  interface.cpp  main.cpp
src/drivers/generic/initrd/: CMakeLists.txt  connection_handler.cpp  interface.cpp  interface.h  main.cpp  parse.cpp  parse.h
src/drivers/generic/test/: CMakeLists.txt  main.cpp
src/drivers/input/ps2Keyboard/: CMakeLists.txt  connection.cpp  dmain.c  dmain.cpp  inline-asm.cpp  inline-asm.h  linker.ld  new.cpp  scancodes.cpp  scancodes.h
src/drivers/storage/ahci/: CMakeLists.txt  ahciStructures.h  dmain.c
src/drivers/storage/nvme/: CMakeLists.txt  dmain.c  enumerate_pci.c  enumerate_pci.h  linker.ld  nvme.h
src/drivers/x86_64/ps2Keyboard/: CMakeLists.txt  dmain.cpp  scancodes.cpp  scancodes.h
src/drivers/x86_64/sata/: CMakeLists.txt  command.cpp  command.h  interface.cpp  main.cpp  new.cpp  structs.h
src/oboskrnl/: CMakeLists.txt  atomic.h  console.cpp  console.h  error.cpp  error.h  export.h  handle.h  hashmap.h  inline-asm.asm  inline-asm.cpp  inline-asm.h  int.h  klog.cpp  klog.h  memory_manipulation.h  new  pair.h  stack_canary.cpp  string.cpp  string.h  types.h  vector.h
src/oboskrnl/allocators/: liballoc.cpp  liballoc.h  slab.cpp  slab.h
src/oboskrnl/allocators/vmm/: arch.h  vmm.cpp  vmm.h
src/oboskrnl/arch/: interrupt.h
src/oboskrnl/arch/x86_64/: exception_handlers.cpp  fpu.asm  gdt.asm  gdt.cpp  idt.asm  idt.cpp  int_handlers.asm  interrupt.h  irq.cpp  signals.cpp  smp_start.cpp  smp_trampoline.asm  sse.asm  stack_canary.cpp  trace.cpp
src/oboskrnl/boot/: boot.h  cfg.cpp  cfg.h  kernel_bootstrap-i686.asm  kmain.cpp  multiboot.h
src/oboskrnl/boot/i686/: kernel_bootstrap.asm  linker.ld
src/oboskrnl/boot/x86-64/: kernel_bootstrap.asm  linker.ld
src/oboskrnl/boot/x86_64/: kmain.cpp  kmain_arch.cpp
src/oboskrnl/crti/src/: crti.S  crtn.S
src/oboskrnl/descriptors/gdt/: gdt.asm  gdt.cpp  gdt.h  gdt_x86-64.asm
src/oboskrnl/descriptors/idt/: handlers.asm  idt.asm  idt.cpp  idt.h  pic.cpp  pic.h
src/oboskrnl/driverInterface/: call.h  input_device.h  interface.cpp  interface.h  load.h  register.cpp  register.h  register_drive.cpp  register_drive.h  struct.h
src/oboskrnl/driverInterface/x86_64/: call.cpp  call_interface.cpp  call_interface.h  driver_call.asm  enumerate_pci.cpp  enumerate_pci.h  load.cpp  scan.cpp
src/oboskrnl/driver_api/: driver_communication.md  driver_interface.cpp  driver_interface.h  enums.h  interrupts.asm  interrupts.cpp  interrupts.h  syscall_interface.asm  syscall_interface.h  syscalls.cpp  syscalls.h
src/oboskrnl/driver_api/load/: module.cpp  module.h
src/oboskrnl/driver_api/x86_64/: dInterrupts.asm
src/oboskrnl/elf/: elf.cpp  elf.h  elfStructures.h
src/oboskrnl/i686/: exception_handlers.cpp
src/oboskrnl/liballoc/: liballoc.cpp  liballoc.h
src/oboskrnl/memory_manager/: physical.cpp  physical.h
src/oboskrnl/memory_manager/i686/: physical.cpp
src/oboskrnl/memory_manager/liballoc/: liballoc.cpp  liballoc.h  liballoc_old.c
src/oboskrnl/memory_manager/paging/: allocate.cpp  allocate.h  init.asm  init.cpp  init.h  liballoc_hooks.cpp
src/oboskrnl/memory_manager/x86-64/: physical.cpp
src/oboskrnl/multitasking/: arch.h  cpu_local.h  multitasking-i686.asm  multitasking.asm  multitasking.cpp  multitasking.h  multitasking_x86-64.asm  scheduler.cpp  scheduler.h  taskSwitch.h  thread.cpp  thread.h  threadHandle.cpp  threadHandle.h
src/oboskrnl/multitasking/locks/: mutex.cpp  mutex.h
src/oboskrnl/multitasking/memory_manager/: physical.h
src/oboskrnl/multitasking/mutex/: mutex.cpp  mutex.h  mutexHandle.cpp  mutexHandle.h
src/oboskrnl/multitasking/process/: arch.h  process.cpp  process.h  signals.h
src/oboskrnl/multitasking/threadAPI/: thrHandle.cpp  thrHandle.h
src/oboskrnl/process/: process.cpp  process.h
src/oboskrnl/syscalls/: interrupts.asm  syscall_interface.asm  syscall_interface.h  syscalls.cpp  syscalls.h
src/oboskrnl/threadAPI/: thrHandle.cpp  thrHandle.h
src/oboskrnl/utils/: bitfields.cpp  bitfields.h  hashTable.h  hashmap.h  list.h  memcpy.asm  memcpy_i686.asm  memcpy_x86-64.asm  memory.cpp  memory.h  smart_ptr.h  stack.h  string.cpp  string.h  vector.h
src/oboskrnl/vfs/: error.h  mount.cpp  mount.h  node.h  off_t.h  vfsNode.h
src/oboskrnl/x86-64/: exception_handlers.cpp  inline-asm.asm
src/oboskrnl/x86_64-utils/: asm.asm  asm.h  memory_manipulation.asm
src/testProgram/: CMakeLists.txt  linker.ld  main.asm  main.c
(+1042 files in other folders)
